# objects

./: .gitattributes  .gitignore  .gitmodules  3_8-10_joint_protector.py  3_8-10_joint_protector_female.py  3_8-10_joint_protector_male.py  5_16-18_joint_protector_female.py  5_16-18_joint_protector_male.py  README.md  action_quick_release_protector.py  action_quick_release_protector_female.py  action_quick_release_protector_male.py  allen_key.py  arton_covid_test_tube_stand.py  bt_beanie_flush_buttons.py  burton_stepon_highback_delete.py  catan_base.py  catan_number_tiles.py  chipolo_card_point.py  chipolo_one_point.py  cpu_holder.py  cue_extension_sanding_tool.py  cue_extension_thread_adapter.py  cue_joint_protector_female.py  cue_weight_bolt_spacer.py  cuetec_weight_spacer.py  desktop_battery_tray.py  door_hook.py  environment.yml  environment_ci.yml  export.py  fake_loonie.py  flake.nix  flyby_battery_retention_bracket.py  hinge_test.py  hoehoehoe.py  joint_ref_bug.py  lianli_pc_p80_reset_button.py  lianli_pc_p80_vent_blocker.py  lianli_pc_p80_watercooling_blocker.py  (+35 more)
.vitamins/: adafruit_4090_usb_c_breakout.py  dlp_rfid2.py
challenge_parts/: cswp_sample_exam_1_3.py  cswp_sample_exam_4_5.py
display_case_HYX-JX0701570D103A27/: constants.py  display.py
patches/: ocp-vscode-autoreconnect.patch
res/: .gitignore  4090_USB_C_Breakout.step  91100A160_Zinc-Plated_Steel_Oversized_Washer.step  91292A010_18-8_Stainless_Steel_Socket_Head_Screw.step  91292A034_18-8_Stainless_Steel_Socket_Head_Screw.step  91292A837_18-8_Stainless_Steel_Socket_Head_Screw.step  (+3 more)
(+13 files in other folders)
