[project]
name = "objects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bd-warehouse",
    "build123d>=0.9.1",
    "cadquery",
    "click>=8.2.1",
    "ocp-vscode>=2.7.1",
]

# https://stackoverflow.com/a/72547402
[tool.setuptools]
py-modules = []

[tool.uv.sources]
bd-warehouse = { git = "https://github.com/gumyr/bd_warehouse" }
cadquery = { git = "https://github.com/CadQuery/cadquery" }
