[project]
name = "objects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bd-warehouse>=0.1.1",
    "build123d>=0.10.0",
    "cadquery",
    "click>=8.2.1",
    "ocp-vscode>=3.0.1",
]

# https://stackoverflow.com/a/72547402
[tool.setuptools]
py-modules = []

[tool.uv.sources]
cadquery = { git = "https://github.com/CadQuery/cadquery" }
