[project]
name = "objects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bd-warehouse>=0.1.1",
    "build123d>=0.10.0",
    "cadquery",
    "click>=8.2.1",
    "ipython-b3d",
    "ocp-vscode>=3.1.2",
]

# https://stackoverflow.com/a/72547402
[tool.setuptools]
py-modules = []

[tool.uv.sources]
cadquery = { git = "https://github.com/CadQuery/cadquery" }
ipython-b3d = { git = "https://github.com/Gigahawk/ipython-b3d" }
